// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sandbox/Pager CollapsedWithDots smoke-test 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  font-size: 1rem;
  line-height: calc(1em + 8px);
  -webkit-text-decoration: none;
  text-decoration: none;
  border: none;
  outline: none;
  touch-action: manipulation;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: box-shadow 0.2s ease 0s,color 0.2s ease 0s, background 0.2s ease 0s,opacity 0.2s ease 0s;
  transition: box-shadow 0.2s ease 0s,color 0.2s ease 0s, background 0.2s ease 0s,opacity 0.2s ease 0s;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: content-box;
  min-width: 24px;
  min-height: 24px;
  padding: 8px;
  cursor: pointer;
  font-weight: bold;
  -webkit-transform: translateZ(0);
  border-radius: 48px;
  background: transparent;
  color: #858585;
}

.c1[hidden] {
  visibility: hidden;
  display: block;
}

.c1:hover {
  background: rgba(0,0,0,0.04);
  color: #474747;
}

.c1[aria-current] {
  background-color: rgba(0,0,0,0.88);
  color: #ffffff;
}

.c1[aria-current]:hover {
  background-color: rgba(0,0,0,0.88);
  color: #ffffff;
}

.c1:hover {
  background: transparent;
}

.c2 {
  font-size: 1rem;
  line-height: calc(1em + 8px);
  -webkit-text-decoration: none;
  text-decoration: none;
  border: none;
  outline: none;
  touch-action: manipulation;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: box-shadow 0.2s ease 0s,color 0.2s ease 0s, background 0.2s ease 0s,opacity 0.2s ease 0s;
  transition: box-shadow 0.2s ease 0s,color 0.2s ease 0s, background 0.2s ease 0s,opacity 0.2s ease 0s;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: content-box;
  min-width: 24px;
  min-height: 24px;
  padding: 8px;
  cursor: pointer;
  font-weight: bold;
  -webkit-transform: translateZ(0);
  border-radius: 48px;
  background: transparent;
  color: #858585;
}

.c2[hidden] {
  visibility: hidden;
  display: block;
}

.c2:hover {
  background: rgba(0,0,0,0.04);
  color: #474747;
}

.c2[aria-current] {
  background-color: rgba(0,0,0,0.88);
  color: #ffffff;
}

.c2[aria-current]:hover {
  background-color: rgba(0,0,0,0.88);
  color: #ffffff;
}

.c3.c3 {
  color: #858585;
  background: none;
}

<div data-dark="false">
  <nav class="c0">
    <a href="/4">
      <button aria-disabled="false"
              class="c1"
      >
        <svg viewbox="0 0 10 8"
             width="16"
             height="16"
        >
          <polyline stroke-width="2"
                    points="1,2 5,6 9,2"
                    transform="rotate(90 5 4)"
                    class="mxPpn"
          >
          </polyline>
        </svg>
      </button>
    </a>
    <a href="/1">
      <button type="button"
              class="c2"
      >
        <span>
          1
        </span>
      </button>
    </a>
    <button type="button"
            disabled
            class="c2 c3"
    >
      <svg viewbox="0 0 20 6"
           width="20"
           height="20"
           class="yynJn"
      >
        <path fill-rule="evenodd"
              d="M5,14.5 C3.61928813,14.5 2.5,13.3807119 2.5,12 C2.5,10.6192881 3.61928813,9.5 5,9.5
          C6.38071187,9.5 7.5,10.6192881 7.5,12 C7.5,13.3807119 6.38071187,14.5 5,14.5 Z M12,14.5
          C10.6192881,14.5 9.5,13.3807119 9.5,12 C9.5,10.6192881 10.6192881,9.5 12,9.5
          C13.3807119,9.5 14.5,10.6192881 14.5,12 C14.5,13.3807119 13.3807119,14.5 12,14.5 Z M19,14.5
          C17.6192881,14.5 16.5,13.3807119 16.5,12 C16.5,10.6192881 17.6192881,9.5 19,9.5
          C20.3807119,9.5 21.5,10.6192881 21.5,12 C21.5,13.3807119 20.3807119,14.5 19,14.5 Z"
              transform="translate(-2 -9)"
        >
        </path>
      </svg>
    </button>
    <a href="/4">
      <button type="button"
              class="c2"
      >
        <span>
          4
        </span>
      </button>
    </a>
    <button type="button"
            aria-current="true"
            class="c2"
    >
      <span>
        5
      </span>
    </button>
    <a href="/6">
      <button type="button"
              class="c2"
      >
        <span>
          6
        </span>
      </button>
    </a>
    <a href="/7">
      <button type="button"
              class="c2"
      >
        <span>
          7
        </span>
      </button>
    </a>
    <a href="/8">
      <button type="button"
              class="c2"
      >
        <span>
          8
        </span>
      </button>
    </a>
    <a href="/6">
      <button aria-disabled="false"
              class="c1"
      >
        <svg viewbox="0 0 10 8"
             width="16"
             height="16"
        >
          <polyline stroke-width="2"
                    points="1,2 5,6 9,2"
                    transform="rotate(-90 5 4)"
                    class="mxPpn"
          >
          </polyline>
        </svg>
      </button>
    </a>
  </nav>
</div>
`;

exports[`Sandbox/Pager Default smoke-test 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  font-size: 1rem;
  line-height: calc(1em + 8px);
  -webkit-text-decoration: none;
  text-decoration: none;
  border: none;
  outline: none;
  touch-action: manipulation;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: box-shadow 0.2s ease 0s,color 0.2s ease 0s, background 0.2s ease 0s,opacity 0.2s ease 0s;
  transition: box-shadow 0.2s ease 0s,color 0.2s ease 0s, background 0.2s ease 0s,opacity 0.2s ease 0s;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: content-box;
  min-width: 24px;
  min-height: 24px;
  padding: 8px;
  cursor: pointer;
  font-weight: bold;
  -webkit-transform: translateZ(0);
  border-radius: 48px;
  background: transparent;
  color: #858585;
}

.c1[hidden] {
  visibility: hidden;
  display: block;
}

.c1:hover {
  background: rgba(0,0,0,0.04);
  color: #474747;
}

.c1[aria-current] {
  background-color: rgba(0,0,0,0.88);
  color: #ffffff;
}

.c1[aria-current]:hover {
  background-color: rgba(0,0,0,0.88);
  color: #ffffff;
}

.c1:hover {
  background: transparent;
}

.c2 {
  font-size: 1rem;
  line-height: calc(1em + 8px);
  -webkit-text-decoration: none;
  text-decoration: none;
  border: none;
  outline: none;
  touch-action: manipulation;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: box-shadow 0.2s ease 0s,color 0.2s ease 0s, background 0.2s ease 0s,opacity 0.2s ease 0s;
  transition: box-shadow 0.2s ease 0s,color 0.2s ease 0s, background 0.2s ease 0s,opacity 0.2s ease 0s;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: content-box;
  min-width: 24px;
  min-height: 24px;
  padding: 8px;
  cursor: pointer;
  font-weight: bold;
  -webkit-transform: translateZ(0);
  border-radius: 48px;
  background: transparent;
  color: #858585;
}

.c2[hidden] {
  visibility: hidden;
  display: block;
}

.c2:hover {
  background: rgba(0,0,0,0.04);
  color: #474747;
}

.c2[aria-current] {
  background-color: rgba(0,0,0,0.88);
  color: #ffffff;
}

.c2[aria-current]:hover {
  background-color: rgba(0,0,0,0.88);
  color: #ffffff;
}

<div data-dark="false">
  <nav class="c0">
    <button type="button"
            hidden
            disabled
            class="c1"
    >
      <svg viewbox="0 0 10 8"
           width="16"
           height="16"
      >
        <polyline stroke-width="2"
                  points="1,2 5,6 9,2"
                  transform="rotate(90 5 4)"
                  class="mxPpn"
        >
        </polyline>
      </svg>
    </button>
    <button type="button"
            aria-current="true"
            class="c2"
    >
      <span>
        1
      </span>
    </button>
    <button type="button"
            class="c2"
    >
      <span>
        2
      </span>
    </button>
    <button type="button"
            class="c2"
    >
      <span>
        3
      </span>
    </button>
    <button type="button"
            class="c2"
    >
      <span>
        4
      </span>
    </button>
    <button type="button"
            class="c2"
    >
      <span>
        5
      </span>
    </button>
    <button type="button"
            class="c2"
    >
      <span>
        6
      </span>
    </button>
    <button type="button"
            class="c2"
    >
      <span>
        7
      </span>
    </button>
    <button type="button"
            class="c1"
    >
      <svg viewbox="0 0 10 8"
           width="16"
           height="16"
      >
        <polyline stroke-width="2"
                  points="1,2 5,6 9,2"
                  transform="rotate(-90 5 4)"
                  class="mxPpn"
        >
        </polyline>
      </svg>
    </button>
  </nav>
</div>
`;

exports[`Sandbox/Pager LastPage smoke-test 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  font-size: 1rem;
  line-height: calc(1em + 8px);
  -webkit-text-decoration: none;
  text-decoration: none;
  border: none;
  outline: none;
  touch-action: manipulation;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: box-shadow 0.2s ease 0s,color 0.2s ease 0s, background 0.2s ease 0s,opacity 0.2s ease 0s;
  transition: box-shadow 0.2s ease 0s,color 0.2s ease 0s, background 0.2s ease 0s,opacity 0.2s ease 0s;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: content-box;
  min-width: 24px;
  min-height: 24px;
  padding: 8px;
  cursor: pointer;
  font-weight: bold;
  -webkit-transform: translateZ(0);
  border-radius: 48px;
  background: transparent;
  color: #858585;
}

.c1[hidden] {
  visibility: hidden;
  display: block;
}

.c1:hover {
  background: rgba(0,0,0,0.04);
  color: #474747;
}

.c1[aria-current] {
  background-color: rgba(0,0,0,0.88);
  color: #ffffff;
}

.c1[aria-current]:hover {
  background-color: rgba(0,0,0,0.88);
  color: #ffffff;
}

.c1:hover {
  background: transparent;
}

.c2 {
  font-size: 1rem;
  line-height: calc(1em + 8px);
  -webkit-text-decoration: none;
  text-decoration: none;
  border: none;
  outline: none;
  touch-action: manipulation;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: box-shadow 0.2s ease 0s,color 0.2s ease 0s, background 0.2s ease 0s,opacity 0.2s ease 0s;
  transition: box-shadow 0.2s ease 0s,color 0.2s ease 0s, background 0.2s ease 0s,opacity 0.2s ease 0s;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: content-box;
  min-width: 24px;
  min-height: 24px;
  padding: 8px;
  cursor: pointer;
  font-weight: bold;
  -webkit-transform: translateZ(0);
  border-radius: 48px;
  background: transparent;
  color: #858585;
}

.c2[hidden] {
  visibility: hidden;
  display: block;
}

.c2:hover {
  background: rgba(0,0,0,0.04);
  color: #474747;
}

.c2[aria-current] {
  background-color: rgba(0,0,0,0.88);
  color: #ffffff;
}

.c2[aria-current]:hover {
  background-color: rgba(0,0,0,0.88);
  color: #ffffff;
}

.c3.c3 {
  color: #858585;
  background: none;
}

<div data-dark="false">
  <nav class="c0">
    <a href="/102">
      <button aria-disabled="false"
              class="c1"
      >
        <svg viewbox="0 0 10 8"
             width="16"
             height="16"
        >
          <polyline stroke-width="2"
                    points="1,2 5,6 9,2"
                    transform="rotate(90 5 4)"
                    class="mxPpn"
          >
          </polyline>
        </svg>
      </button>
    </a>
    <a href="/1">
      <button type="button"
              class="c2"
      >
        <span>
          1
        </span>
      </button>
    </a>
    <button type="button"
            disabled
            class="c2 c3"
    >
      <svg viewbox="0 0 20 6"
           width="20"
           height="20"
           class="yynJn"
      >
        <path fill-rule="evenodd"
              d="M5,14.5 C3.61928813,14.5 2.5,13.3807119 2.5,12 C2.5,10.6192881 3.61928813,9.5 5,9.5
          C6.38071187,9.5 7.5,10.6192881 7.5,12 C7.5,13.3807119 6.38071187,14.5 5,14.5 Z M12,14.5
          C10.6192881,14.5 9.5,13.3807119 9.5,12 C9.5,10.6192881 10.6192881,9.5 12,9.5
          C13.3807119,9.5 14.5,10.6192881 14.5,12 C14.5,13.3807119 13.3807119,14.5 12,14.5 Z M19,14.5
          C17.6192881,14.5 16.5,13.3807119 16.5,12 C16.5,10.6192881 17.6192881,9.5 19,9.5
          C20.3807119,9.5 21.5,10.6192881 21.5,12 C21.5,13.3807119 20.3807119,14.5 19,14.5 Z"
              transform="translate(-2 -9)"
        >
        </path>
      </svg>
    </button>
    <a href="/99">
      <button type="button"
              class="c2"
      >
        <span>
          99
        </span>
      </button>
    </a>
    <a href="/100">
      <button type="button"
              class="c2"
      >
        <span>
          100
        </span>
      </button>
    </a>
    <a href="/101">
      <button type="button"
              class="c2"
      >
        <span>
          101
        </span>
      </button>
    </a>
    <a href="/102">
      <button type="button"
              class="c2"
      >
        <span>
          102
        </span>
      </button>
    </a>
    <button type="button"
            aria-current="true"
            class="c2"
    >
      <span>
        103
      </span>
    </button>
    <a href="/103">
      <button hidden
              aria-disabled="true"
              class="c1"
      >
        <svg viewbox="0 0 10 8"
             width="16"
             height="16"
        >
          <polyline stroke-width="2"
                    points="1,2 5,6 9,2"
                    transform="rotate(-90 5 4)"
                    class="mxPpn"
          >
          </polyline>
        </svg>
      </button>
    </a>
  </nav>
</div>
`;

exports[`Sandbox/Pager Link smoke-test 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  font-size: 1rem;
  line-height: calc(1em + 8px);
  -webkit-text-decoration: none;
  text-decoration: none;
  border: none;
  outline: none;
  touch-action: manipulation;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: box-shadow 0.2s ease 0s,color 0.2s ease 0s, background 0.2s ease 0s,opacity 0.2s ease 0s;
  transition: box-shadow 0.2s ease 0s,color 0.2s ease 0s, background 0.2s ease 0s,opacity 0.2s ease 0s;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: content-box;
  min-width: 24px;
  min-height: 24px;
  padding: 8px;
  cursor: pointer;
  font-weight: bold;
  -webkit-transform: translateZ(0);
  border-radius: 48px;
  background: transparent;
  color: #858585;
}

.c1[hidden] {
  visibility: hidden;
  display: block;
}

.c1:hover {
  background: rgba(0,0,0,0.04);
  color: #474747;
}

.c1[aria-current] {
  background-color: rgba(0,0,0,0.88);
  color: #ffffff;
}

.c1[aria-current]:hover {
  background-color: rgba(0,0,0,0.88);
  color: #ffffff;
}

.c1:hover {
  background: transparent;
}

.c2 {
  font-size: 1rem;
  line-height: calc(1em + 8px);
  -webkit-text-decoration: none;
  text-decoration: none;
  border: none;
  outline: none;
  touch-action: manipulation;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: box-shadow 0.2s ease 0s,color 0.2s ease 0s, background 0.2s ease 0s,opacity 0.2s ease 0s;
  transition: box-shadow 0.2s ease 0s,color 0.2s ease 0s, background 0.2s ease 0s,opacity 0.2s ease 0s;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: content-box;
  min-width: 24px;
  min-height: 24px;
  padding: 8px;
  cursor: pointer;
  font-weight: bold;
  -webkit-transform: translateZ(0);
  border-radius: 48px;
  background: transparent;
  color: #858585;
}

.c2[hidden] {
  visibility: hidden;
  display: block;
}

.c2:hover {
  background: rgba(0,0,0,0.04);
  color: #474747;
}

.c2[aria-current] {
  background-color: rgba(0,0,0,0.88);
  color: #ffffff;
}

.c2[aria-current]:hover {
  background-color: rgba(0,0,0,0.88);
  color: #ffffff;
}

<div data-dark="false">
  <nav class="c0">
    <a href="/1">
      <button hidden
              aria-disabled="true"
              class="c1"
      >
        <svg viewbox="0 0 10 8"
             width="16"
             height="16"
        >
          <polyline stroke-width="2"
                    points="1,2 5,6 9,2"
                    transform="rotate(90 5 4)"
                    class="mxPpn"
          >
          </polyline>
        </svg>
      </button>
    </a>
    <button type="button"
            aria-current="true"
            class="c2"
    >
      <span>
        1
      </span>
    </button>
    <a href="/2">
      <button type="button"
              class="c2"
      >
        <span>
          2
        </span>
      </button>
    </a>
    <a href="/3">
      <button type="button"
              class="c2"
      >
        <span>
          3
        </span>
      </button>
    </a>
    <a href="/4">
      <button type="button"
              class="c2"
      >
        <span>
          4
        </span>
      </button>
    </a>
    <a href="/5">
      <button type="button"
              class="c2"
      >
        <span>
          5
        </span>
      </button>
    </a>
    <a href="/6">
      <button type="button"
              class="c2"
      >
        <span>
          6
        </span>
      </button>
    </a>
    <a href="/7">
      <button type="button"
              class="c2"
      >
        <span>
          7
        </span>
      </button>
    </a>
    <a href="/2">
      <button aria-disabled="false"
              class="c1"
      >
        <svg viewbox="0 0 10 8"
             width="16"
             height="16"
        >
          <polyline stroke-width="2"
                    points="1,2 5,6 9,2"
                    transform="rotate(-90 5 4)"
                    class="mxPpn"
          >
          </polyline>
        </svg>
      </button>
    </a>
  </nav>
</div>
`;

exports[`Sandbox/Pager LittlePageRangeDisplayed smoke-test 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  font-size: 1rem;
  line-height: calc(1em + 8px);
  -webkit-text-decoration: none;
  text-decoration: none;
  border: none;
  outline: none;
  touch-action: manipulation;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: box-shadow 0.2s ease 0s,color 0.2s ease 0s, background 0.2s ease 0s,opacity 0.2s ease 0s;
  transition: box-shadow 0.2s ease 0s,color 0.2s ease 0s, background 0.2s ease 0s,opacity 0.2s ease 0s;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: content-box;
  min-width: 24px;
  min-height: 24px;
  padding: 8px;
  cursor: pointer;
  font-weight: bold;
  -webkit-transform: translateZ(0);
  border-radius: 48px;
  background: transparent;
  color: #858585;
}

.c1[hidden] {
  visibility: hidden;
  display: block;
}

.c1:hover {
  background: rgba(0,0,0,0.04);
  color: #474747;
}

.c1[aria-current] {
  background-color: rgba(0,0,0,0.88);
  color: #ffffff;
}

.c1[aria-current]:hover {
  background-color: rgba(0,0,0,0.88);
  color: #ffffff;
}

.c1:hover {
  background: transparent;
}

.c2 {
  font-size: 1rem;
  line-height: calc(1em + 8px);
  -webkit-text-decoration: none;
  text-decoration: none;
  border: none;
  outline: none;
  touch-action: manipulation;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: box-shadow 0.2s ease 0s,color 0.2s ease 0s, background 0.2s ease 0s,opacity 0.2s ease 0s;
  transition: box-shadow 0.2s ease 0s,color 0.2s ease 0s, background 0.2s ease 0s,opacity 0.2s ease 0s;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: content-box;
  min-width: 24px;
  min-height: 24px;
  padding: 8px;
  cursor: pointer;
  font-weight: bold;
  -webkit-transform: translateZ(0);
  border-radius: 48px;
  background: transparent;
  color: #858585;
}

.c2[hidden] {
  visibility: hidden;
  display: block;
}

.c2:hover {
  background: rgba(0,0,0,0.04);
  color: #474747;
}

.c2[aria-current] {
  background-color: rgba(0,0,0,0.88);
  color: #ffffff;
}

.c2[aria-current]:hover {
  background-color: rgba(0,0,0,0.88);
  color: #ffffff;
}

<div data-dark="false">
  <nav class="c0">
    <a href="/1">
      <button hidden
              aria-disabled="true"
              class="c1"
      >
        <svg viewbox="0 0 10 8"
             width="16"
             height="16"
        >
          <polyline stroke-width="2"
                    points="1,2 5,6 9,2"
                    transform="rotate(90 5 4)"
                    class="mxPpn"
          >
          </polyline>
        </svg>
      </button>
    </a>
    <button type="button"
            aria-current="true"
            class="c2"
    >
      <span>
        1
      </span>
    </button>
    <a href="/2">
      <button type="button"
              class="c2"
      >
        <span>
          2
        </span>
      </button>
    </a>
    <a href="/3">
      <button type="button"
              class="c2"
      >
        <span>
          3
        </span>
      </button>
    </a>
    <a href="/4">
      <button type="button"
              class="c2"
      >
        <span>
          4
        </span>
      </button>
    </a>
    <a href="/2">
      <button aria-disabled="false"
              class="c1"
      >
        <svg viewbox="0 0 10 8"
             width="16"
             height="16"
        >
          <polyline stroke-width="2"
                    points="1,2 5,6 9,2"
                    transform="rotate(-90 5 4)"
                    class="mxPpn"
          >
          </polyline>
        </svg>
      </button>
    </a>
  </nav>
</div>
`;

exports[`Sandbox/Pager NotCollapsed smoke-test 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  font-size: 1rem;
  line-height: calc(1em + 8px);
  -webkit-text-decoration: none;
  text-decoration: none;
  border: none;
  outline: none;
  touch-action: manipulation;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: box-shadow 0.2s ease 0s,color 0.2s ease 0s, background 0.2s ease 0s,opacity 0.2s ease 0s;
  transition: box-shadow 0.2s ease 0s,color 0.2s ease 0s, background 0.2s ease 0s,opacity 0.2s ease 0s;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: content-box;
  min-width: 24px;
  min-height: 24px;
  padding: 8px;
  cursor: pointer;
  font-weight: bold;
  -webkit-transform: translateZ(0);
  border-radius: 48px;
  background: transparent;
  color: #858585;
}

.c1[hidden] {
  visibility: hidden;
  display: block;
}

.c1:hover {
  background: rgba(0,0,0,0.04);
  color: #474747;
}

.c1[aria-current] {
  background-color: rgba(0,0,0,0.88);
  color: #ffffff;
}

.c1[aria-current]:hover {
  background-color: rgba(0,0,0,0.88);
  color: #ffffff;
}

.c1:hover {
  background: transparent;
}

.c2 {
  font-size: 1rem;
  line-height: calc(1em + 8px);
  -webkit-text-decoration: none;
  text-decoration: none;
  border: none;
  outline: none;
  touch-action: manipulation;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: box-shadow 0.2s ease 0s,color 0.2s ease 0s, background 0.2s ease 0s,opacity 0.2s ease 0s;
  transition: box-shadow 0.2s ease 0s,color 0.2s ease 0s, background 0.2s ease 0s,opacity 0.2s ease 0s;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: content-box;
  min-width: 24px;
  min-height: 24px;
  padding: 8px;
  cursor: pointer;
  font-weight: bold;
  -webkit-transform: translateZ(0);
  border-radius: 48px;
  background: transparent;
  color: #858585;
}

.c2[hidden] {
  visibility: hidden;
  display: block;
}

.c2:hover {
  background: rgba(0,0,0,0.04);
  color: #474747;
}

.c2[aria-current] {
  background-color: rgba(0,0,0,0.88);
  color: #ffffff;
}

.c2[aria-current]:hover {
  background-color: rgba(0,0,0,0.88);
  color: #ffffff;
}

<div data-dark="false">
  <nav class="c0">
    <a href="/3">
      <button aria-disabled="false"
              class="c1"
      >
        <svg viewbox="0 0 10 8"
             width="16"
             height="16"
        >
          <polyline stroke-width="2"
                    points="1,2 5,6 9,2"
                    transform="rotate(90 5 4)"
                    class="mxPpn"
          >
          </polyline>
        </svg>
      </button>
    </a>
    <a href="/1">
      <button type="button"
              class="c2"
      >
        <span>
          1
        </span>
      </button>
    </a>
    <a href="/2">
      <button type="button"
              class="c2"
      >
        <span>
          2
        </span>
      </button>
    </a>
    <a href="/3">
      <button type="button"
              class="c2"
      >
        <span>
          3
        </span>
      </button>
    </a>
    <button type="button"
            aria-current="true"
            class="c2"
    >
      <span>
        4
      </span>
    </button>
    <a href="/5">
      <button type="button"
              class="c2"
      >
        <span>
          5
        </span>
      </button>
    </a>
    <a href="/6">
      <button type="button"
              class="c2"
      >
        <span>
          6
        </span>
      </button>
    </a>
    <a href="/7">
      <button type="button"
              class="c2"
      >
        <span>
          7
        </span>
      </button>
    </a>
    <a href="/5">
      <button aria-disabled="false"
              class="c1"
      >
        <svg viewbox="0 0 10 8"
             width="16"
             height="16"
        >
          <polyline stroke-width="2"
                    points="1,2 5,6 9,2"
                    transform="rotate(-90 5 4)"
                    class="mxPpn"
          >
          </polyline>
        </svg>
      </button>
    </a>
  </nav>
</div>
`;

exports[`Sandbox/Pager One smoke-test 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  font-size: 1rem;
  line-height: calc(1em + 8px);
  -webkit-text-decoration: none;
  text-decoration: none;
  border: none;
  outline: none;
  touch-action: manipulation;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: box-shadow 0.2s ease 0s,color 0.2s ease 0s, background 0.2s ease 0s,opacity 0.2s ease 0s;
  transition: box-shadow 0.2s ease 0s,color 0.2s ease 0s, background 0.2s ease 0s,opacity 0.2s ease 0s;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: content-box;
  min-width: 24px;
  min-height: 24px;
  padding: 8px;
  cursor: pointer;
  font-weight: bold;
  -webkit-transform: translateZ(0);
  border-radius: 48px;
  background: transparent;
  color: #858585;
}

.c1[hidden] {
  visibility: hidden;
  display: block;
}

.c1:hover {
  background: rgba(0,0,0,0.04);
  color: #474747;
}

.c1[aria-current] {
  background-color: rgba(0,0,0,0.88);
  color: #ffffff;
}

.c1[aria-current]:hover {
  background-color: rgba(0,0,0,0.88);
  color: #ffffff;
}

.c1:hover {
  background: transparent;
}

.c2 {
  font-size: 1rem;
  line-height: calc(1em + 8px);
  -webkit-text-decoration: none;
  text-decoration: none;
  border: none;
  outline: none;
  touch-action: manipulation;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: box-shadow 0.2s ease 0s,color 0.2s ease 0s, background 0.2s ease 0s,opacity 0.2s ease 0s;
  transition: box-shadow 0.2s ease 0s,color 0.2s ease 0s, background 0.2s ease 0s,opacity 0.2s ease 0s;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: content-box;
  min-width: 24px;
  min-height: 24px;
  padding: 8px;
  cursor: pointer;
  font-weight: bold;
  -webkit-transform: translateZ(0);
  border-radius: 48px;
  background: transparent;
  color: #858585;
}

.c2[hidden] {
  visibility: hidden;
  display: block;
}

.c2:hover {
  background: rgba(0,0,0,0.04);
  color: #474747;
}

.c2[aria-current] {
  background-color: rgba(0,0,0,0.88);
  color: #ffffff;
}

.c2[aria-current]:hover {
  background-color: rgba(0,0,0,0.88);
  color: #ffffff;
}

<div data-dark="false">
  <nav class="c0">
    <a href="/1">
      <button hidden
              aria-disabled="true"
              class="c1"
      >
        <svg viewbox="0 0 10 8"
             width="16"
             height="16"
        >
          <polyline stroke-width="2"
                    points="1,2 5,6 9,2"
                    transform="rotate(90 5 4)"
                    class="mxPpn"
          >
          </polyline>
        </svg>
      </button>
    </a>
    <button type="button"
            aria-current="true"
            class="c2"
    >
      <span>
        1
      </span>
    </button>
    <a href="/1">
      <button hidden
              aria-disabled="true"
              class="c1"
      >
        <svg viewbox="0 0 10 8"
             width="16"
             height="16"
        >
          <polyline stroke-width="2"
                    points="1,2 5,6 9,2"
                    transform="rotate(-90 5 4)"
                    class="mxPpn"
          >
          </polyline>
        </svg>
      </button>
    </a>
  </nav>
</div>
`;
